fixes alignment

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -122,11 +122,12 @@ height: 100vh;
       img {
         width: 50px;
       }
-       @include mobile{
-      img{
-        display: none;
-      }
-    }
+    //    @include mobile{
+    //   img{
+    //     // display: none;
+        
+    //   }
+    // }
     }
   }
 
@@ -181,7 +182,7 @@ height: 100vh;
     padding: 10px 20px;
     font-size: 14px;
     margin-top: 220px;
-    margin-left: 130px;
+    margin-left: 120px;
   }
 }
   .slidingTexContainer {
